<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>learning_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zhangchenghua@lumosbot.tech">duways</maintainer>
  <license>TODO: License declaration</license>
  <!--编译依赖-->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <!--运行依赖-->  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>builtin_interfaces</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
